--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -614,6 +614,10 @@
   border-left: thin solid #b0bdcc;
 }
 
+.patchContentTable .diffTextForBinaryInSidyBySide {
+ width: 50%;
+}
+
 .patchContentTable .diffTextFileHeader {
   color: grey;
   font-weight: bold;
@@ -870,6 +874,14 @@
 
 .rightmost  {
   border-right: 1px solid trimColor;
+}
+
+.sideBySideTableBinaryHeader {
+  border-right: thin solid #b0bdcc;
+  border-left:  thin solid #b0bdcc;
+  width: 100%;
+  color: grey;
+  font-weight: bold;
 }
 
 .infoTable td.approvalrole {
