--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -708,6 +708,9 @@
   font-weight: bold;
   text-align: center;
 }
+.patchContentTable td.fileColumnHeader.unifiedTableHeader {
+  text-align: left;
+}
 .lineNumber.fileColumnHeader {
   border-bottom: 1px solid trimColor;
 }
