Click icon to add file comment in SideBySide view.
In the table header of side-by-side diff view
add file level comment (comment on the whole file)
by single click on the icon in the line-number
column header.

Set comments on whole file prevent committers
from being confused by adding it on a specific
line, small snippets/lines code, especially in
the case of adding some comments on the architecture.

Change-Id: I6c613854caa9c93e7c8d60d3edfd8785214085fd
Signed-off-by: Bruce Zu <bruce.zu@sonymobile.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -651,6 +651,9 @@
 .patchContentTable tr.commentHolder .iconCell {
   background: white;
 }
+.patchContentTable tr.commentHolder .iconCellOfFileCommentRow {
+  background: trimColor;
+}
 .patchContentTable td.commentHolder {
   padding-left: 0;
   padding-right: 0;
@@ -774,6 +777,11 @@
   text-decoration: underline;
 }
 
+.patchContentTable td.cellsNextToFileComment {
+  background: trimColor;
+  border-top: trimColor;
+  border-bottom: trimColor;
+}
 .patchContentTable .activeRow .iconCell,
 .patchContentTable .activeRow .lineNumber {
   background: selectionColor;
