--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -626,6 +626,7 @@
 .patchContentTable .diffText {
   white-space: pre;
   padding-left: 0.2em;
+  border-left: thin solid #b0bdcc;
 }
 
 .patchContentTable .diffTextFileHeader {
@@ -803,6 +804,13 @@
   border-bottom: 1px solid blue;
 }
 
+.patchContentTable .borderRowOfFileComment .iconCellOfFileCommentRow,
+.patchContentTable .borderRowOfFileComment .lineNumber,
+.patchContentTable .borderRowOfFileComment .diffText {
+  height: 20px;
+  background: trimColor;
+  border-bottom: 1px solid trimColor;
+}
 
 /** Change **/
 .changeScreenStarIcon {
