Have the reviewed panel also at the bottom of the patch screen
Reviewers normally review patches top down, finishing the review when
they reach the bottom of the patch. To use the streamlined review
workflow they need to scroll back to the top to find the reviewed
checkbox and link. Have the reviewed panel also at the bottom of the
patch screen so that reviewers do not need to scroll back to the top.

Change-Id: Ibdbcb2288e3181298761dc415a04b82ce67764cd
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -601,6 +601,11 @@
   margin-right: 1em;
 }
 
+.reviewedPanelBottom {
+  float: right;
+  font-size: small;
+}
+
 
 /** PatchContentTable **/
 .patchContentTable {
