[RFC] Hide non-frequently used actions under a drop-down menu button
On the change screen we start to have too many action buttons.
Hide the non-frequently used actions under a 'More...' drop-down menu
button. This allows us to add more actions for special cases without
spoiling the UI with too many buttons.

Change-Id: I28dcb9bdc3f18e885ce07bf0baefca4359b91fe7
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -27,6 +27,9 @@
 @external .gwt-InlineLabel;
 @external .gwt-InlineHyperlink;
 @external .gwt-RadioButton;
+@external .gwt-MenuItem;
+@external .gwt-MenuItem-selected;
+@external .gwt-MenuBarPopup;
 
 @external .searchPanel;
 @external .smallHeading;
@@ -956,6 +959,33 @@
 .patchSetActions .gwt-Button {
   margin-right: 30px;
   font-size: 8pt;
+}
+.patchSetActions div {
+  display: inline;
+  position: relative;
+  top: -1px;
+  padding-bottom: 3px;
+  width: 75px;
+  background: url("gerrit_ui/gwt/chrome/images/hborder.png") repeat-x scroll 0 -27px transparent;
+  border: 1px outset #CCCCCC;
+  cursor: pointer;
+}
+.patchSetActions div table {
+  display: inline-block;
+  vertical-align:top;
+}
+.patchSetActions .gwt-MenuItem {
+  font-weight: normal;
+  color: #000000;
+  cursor: pointer;
+  text-decoration: none;
+}
+.patchSetActions .gwt-MenuItem-selected {
+  background: transparent;
+}
+.gwt-MenuBarPopup > div {
+  position: relative;
+  left: -6px;
 }
 
 .selectPatchSetOldVersion {
