--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -52,26 +52,45 @@
   gwt-image: "greenCheck";
 }
 
+/** Override various GWT defaults */
+.gwt-TabBarItem {
+	color: #353535;
+	border-bottom: 3px solid transparent;
+	border-right: 0;
+}
+.gwt-TabBarItem-selected {
+	color: #990000;
+	border-bottom-color: #990000;
+}
+.gwt-TabBar .gwt-TabBarItem,
+.gwt-TabBar .gwt-TabBarRest,
+.gwt-TabPanelBottom {
+	background: transparent;
+}
+
 .gerritTopMenu {
   font-size: 9pt;
   padding-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
-  background: topMenuColor;
-}
-.gerritTopMenu .gwt-TabBar .gwt-TabBarItem,
-.gerritTopMenu .gwt-TabBar .gwt-TabBarRest,
-.gerritTopMenu .gwt-TabBar .gwt-TabPanelBottom {
-  background: topMenuColor;
-}
-.gerritTopMenu .gwt-TabBar .gwt-TabBarItem-selected {
-  background: selectionColor;
+  background: transparent;
 }
 
 .gerritBody {
   font-size: 11pt;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+a,
+a:visited {
+	color: #0654ac;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #0654ac;
+	text-decoration: underline;
 }
 
 .version,
@@ -253,33 +272,46 @@
 .topmenuTDglue {
   width: 100%;
 }
+
 .topmenuMenuLeft {
   width: 300px;
-  border-left: 1px solid topMenuColor;
-  border-right: 1px solid topMenuColor;
-  border-bottom: 1px solid topMenuColor;
+  font-size: 9pt;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background: none;
+  position: relative;
+  top: 0;
+}
+.topmenuMenuLeft tbody tr td table {
+	border: 0;
+}
+.topmenuMenuLeft tbody tr td table.gwt-TabBar {
+	border-bottom: 1px solid #DDD;
+}
+.topmenuMenuLeft .gwt-TextBox {
+	width: 250px;
+}
+.topmenuMenuLeft .gwt-Button {
+	padding: 3px 6px;
 }
 .topmenuMenuLeft .gwt-TabBarFirst {
   display: none;
 }
 .topmenuMenuLeft .gwt-TabBarItem {
   margin: 0px;
-  background: topMenuColor;
+  background: transparent;
   padding-top: 0px;
   padding-bottom: 1px;
   padding-left: 1em;
   padding-right: 1em;
-  border-right: 1px solid black;
-}
-.topmenuMenuLeft .gwt-TabBarItem-selected {
-  background: selectionColor;
 }
 .topmenuMenuLeft .gwt-TabBarRest {
-  background: topMenuColor;
+  background: transparent;
   padding-top: 0px;
 }
 .topmenuMenuLeft .gwt-TabPanelBottom {
-  background: topMenuColor;
+  background: transparent;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -311,7 +343,7 @@
 .searchPanel .gwt-Button {
   font-size: 7pt;
   margin-left: 2px;
-  padding: 1px;
+  padding: 3px 6px;
 }
 
 /** RPC Status **/
@@ -489,6 +521,10 @@
   padding-right: 5px;
   border-right: 1px solid trimColor;
   border-bottom: 1px solid trimColor;
+}
+
+.changeTable a.gwt-InlineHyperlink {
+	color: #222 !important;
 }
 
 .accountDashboard.changeTable tr {
