Provide 3 options to help diff rebased patchsets.
Comparing rebased patchsets will produce forest files.
This feature help make it easy to pick out patches
related to these 2 patchset only.

A listbox in change UI provides 3 options:
-Filter out those irrelevant files from diff result.
-Rebase old patchset against the new patchset's parent before diff.
-Rebase new patchset against the old patchset's parent before diff.

Change-Id: I63d3a21ad4f1ff5dc59bd439466fe0846dab8ce8

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -958,7 +958,7 @@
   font-size: 8pt;
 }
 
-.selectPatchSetOldVersion {
+.selectPatchSetOldVersion .diffByList {
   font-weight: bold;
   margin-right: 30px;
   margin-top: 5px;
