--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -882,9 +882,12 @@
   margin-right: 15px;
 }
 
-.changeInfoBlockEdit {
+.changeInfoTopicPanel img {
   float: right;
-  cursor: pointer;
+}
+
+.changeInfoTopicPanel a {
+  float: left;
 }
 
 .infoBlock {
