Move resources from gerrit-gwtui to gerrit-gwtui-common
This allows plugins to use the standard Gerrit icons.

There is now a single place were icons are stored (in
com.google.gerrit.client in gerrit-gwtui-common). Before they were
distributed over different packages. An exception are a few icons in
com.google.gerrit.client.admin and com.google.gerrit.client.diff which
cannot be moved since they are referenced from a css file in the same
package (at least I don't know how to link to the icons in
gerrit-gwtui-common from the css files).

The icon names were made consistent, duplicate icons were deleted and
the icons are also moved from src/main/java/ to src/main/resources/.

In addition the only gif icon was converted to png.

Change-Id: Ibd9475ae175de6acc7c36bf2e40f96b003f2af10

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/diff/CommentBoxUi.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/diff/CommentBoxUi.css
@@ -123,15 +123,15 @@
   color: #fff;
 }
 
-@sprite .go_prev {
-  gwt-image: "go_prev";
+@sprite .goPrev {
+  gwt-image: "goPrev";
   display: inline-block;
 }
-@sprite .go_next {
-  gwt-image: "go_next";
+@sprite .goNext {
+  gwt-image: "goNext";
   display: inline-block;
 }
-@sprite .go_up {
-  gwt-image: "go_up";
+@sprite .goUp {
+  gwt-image: "goUp";
   display: inline-block;
 }
