Add support for diff web links
Plugins can now add web links to the diff screen that will be
displayed next to the navigation icons.

Change-Id: Ifa01103054c3e81e3121c219ee5b69db2fefb3bf
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -684,6 +684,10 @@ a:hover {
   font-size: small;
 }
 
+.linkPanel img {
+  padding-right: 3px;
+}
+
 
 /** PatchContentTable **/
 .patchContentTable {
