Related Changes: Decorate merged and abandoned changes
Merged changes are decorated with a black dot; abandoned changes are
decorated with a dark red dot.

Change-Id: I1a5d044d432952f864df1fe3ec8ad9a514587fe4
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/related_changes.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/related_changes.css
@@ -68,6 +68,8 @@
 .current,
 .gitweb,
 .indirect,
+.abandoned,
+.merged,
 .notCurrent {
   display: inline-block;
   text-align: center;
@@ -75,6 +77,7 @@
   width: 12px;
 }
 
+.merged,
 .gitweb {
   color: #000;
 }
@@ -82,6 +85,10 @@
 .indirect {
   color: #090;      /* green */
   font-weight: bold;
+}
+
+.abandoned {
+  color: #900;      /* dark red */
 }
 
 .notCurrent {
