ChangeScreen2: Fix file table bouncing on toggle Edit/Done Editing
The reviewed checkbox and the remove button had different CSS
applied, causing the browser to need to relayout the rows on
toggle between Edit and Done Editing.

Fix that by using the same CSS declarations for both classes.

Change-Id: I938c3a940c07e53fc10b98ba156bf192c8721cae

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/file_table.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/file_table.css
@@ -13,10 +13,16 @@
  * limitations under the License.
  */
 
-.pointer, .reviewed {
-  width: 12px;
+.pointer, .reviewed, .removeButton {
   padding: 0px;
   vertical-align: top;
+}
+.pointer {
+  width: 12px;
+}
+.reviewed, .removeButton {
+  height: 19px;
+  width: 20px;
 }
 
 .table tr {
